feat: timer, animation: timer, funtions: timer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,7 @@
         <item>Alarm 2</item>
     </string-array>
 
+    <!-- Image views or others content descriptions -->
+    <string name="start_resume_pause_btn">Start or Resume or Pause button</string>
+
 </resources>
