--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <!-- Image views or others content descriptions -->
     <string name="start_resume_pause_btn">Start or Resume or Pause button</string>
     <string name="add_task_category_btn">Add task or category button</string>
+    <string name="category_icon">Category icon</string>
 
 </resources>
