--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="menu_stats">Stats</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_dot">.</string>
+    <string name="new_task">New Task</string>
+    <string name="new_category">New Category</string>
 
     <!-- Misc or just placeholders -->
     <string name="fragment_ph_timer">This is the timer fragment</string>
