--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,11 +13,26 @@
     <string name="new_task">New Task</string>
     <string name="new_category">New Category</string>
 
+    <!-- Titles and description labels -->
+    <string name="title_label">Title</string>
+    <string name="short_desc_label">Short Description</string>
+    <string name="priority_level">Priority Level</string>
+    <string name="priority_high">High</string>
+    <string name="priority_medium">Medium</string>
+    <string name="priority_low">Low</string>
+    <string name="pomodoro_count">Pomodoros</string>
+    <string name="pomodoro_number_placeholder">4</string>
+    <string name="desc_label">Description</string>
+    <string name="desc_placeholder">(Optional)</string>
+    <string name="add_task_category_label">Category</string>
+
     <!-- Misc or just placeholders -->
     <string name="fragment_ph_timer">This is the timer fragment</string>
     <string name="fragment_ph_task">This is the task fragment</string>
     <string name="fragment_ph_stats">This is the stats fragment</string>
     <string name="fragment_ph_settings">This is the settings fragment</string>
+    <string name="cancel_btn">Cancel</string>
+    <string name="save_btn">Save</string>
 
     <!-- Used Theme Settings Fragment -->
     <string-array name="theme_options">
@@ -33,6 +48,7 @@
     <!-- Image views or others content descriptions -->
     <string name="start_resume_pause_btn">Start or Resume or Pause button</string>
     <string name="add_task_category_btn">Add task or category button</string>
+    <string name="add_category_btn">Add category button</string>
     <string name="category_icon">Category icon</string>
 
 </resources>
